<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">SaleByMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fb_id">944552212250500</string>
    <string name="google_mapkey">AIzaSyCpgPm7w0E30-N_iV8ea-SgYHRFu5LLOFw</string>
    <string name="dialog_message">Loading\u002e\u002e\u002e</string>
    <string name="ok">OK</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="choose_category">Choose category</string>
    <string name="vegetables">Vegetables</string>
    <string name="stationary">Stationary</string>
    <string name="categories">Categories</string>
    <string name="shopkeeper">Shopkeeper</string>
    <string name="customer">Customer</string>
    <string name="select_user">Select user</string>
    <string-array name="usertype">
        <item>@string/select_user</item>
        <item>@string/shopkeeper</item>
        <item>@string/customer</item>
    </string-array>
    <string name="select_discount">Select discount</string>
    <string name="discount1">10-20%</string>
    <string name="discount2">20-30%</string>
    <string name="discount3">30-40%</string>
    <string name="discount4">40-50%</string>
    <string name="discount">Discounts</string>
    <string name="select_location">Select location</string>
    <string name="use_current_location">Use current location</string>
    <string name="search_location">Search location</string>
    <string-array name="location">
        <item>@string/select_location</item>
        <item>@string/use_current_location</item>
        <item>@string/search_location</item>
    </string-array>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="submit">Submit</string>
    <string name="enter_confirmation_code">Please enter confirmation code</string>
    <string name="network_error">No network connection</string>
    <string name="subcat_fetch_error">Unable to fetch sub categories</string>
    <string name="no_cat">No categories found</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="continue_guest">CONTINUE AS GUEST?</string>
    <string name="shop_signup">Shop Sign up</string>
    <string name="cust_signup">Customer Sign up</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="shop_login">Shop Sign in</string>
    <string name="cust_login">Customer Sign in</string>
    <string name="shop_name">Shop Name</string>
    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="email_address">Email address</string>
    <string name="store_url">Store url</string>
    <string name="fb_url">Fb url</string>
    <string name="twitter_url">Twitter url</string>
    <string name="desc">Description</string>
    <string name="phone">Phone</string>
    <string name="comment">Comment</string>
    <string name="store_num">Store phone number</string>
    <string name="add_text">Add comment</string>
    <string name="store_info">My Main store info</string>
    <string name="add_location">Add location</string>
    <string name="edit_location">Edit location</string>
    <string name="buisness_name">Buisness name</string>
    <string name="error">Error</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="error_shopname">Please enter shop name</string>
    <string name="sel_category">Please select category</string>
    <string name="error_email">Please enter valid email</string>
    <string name="error_password">Password length should be 6</string>
    <string name="verification_message">An email has been sent with a verification code</string>
    <string name="verification_code">your verification code is:</string>
    <string name="subject">MapMap Verification</string>
    <string name="from">Map@Map.com</string>
    <string name="user_exists_error">User exists already,Please enter verification code to verify</string>
    <string name="user_exists_login">User already exists, Please login to proceed</string>
    <string name="user_exists_fbuser">User already exists as fb user</string>
    <string name="confirmation">Confirmation</string>
    <string name="verification">Verification</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="enter_digit_code">Please enter 4 digit code</string>
    <string name="acc_successfull">Account created successfully</string>
    <string name="code_mismatch">Code doesn\u0027t match</string>
    <string name="acc_verify">your account is not verified,please verify your account</string>
    <string name="invalid_password">Invalid password</string>
    <string name="user_exists_fb_user">User exists as fbuser, Please login using facebook</string>
    <string name="password_is">your password is :</string>
    <string name="password_reset">Password reset</string>
    <string name="check_email">Please check your email to get your password</string>
    <string name="no_user">No such user exists</string>
    <string name="fb_register">User register as fb user</string>
    <string name="signin_with">Or SignIn With</string>
    <string name="enter_username">Please enter username</string>
    <string name="req_can">Request cancelled</string>
    <string name="verify_email">Please verify your email</string>
    <string name="history">History</string>
    <string name="fav">Favourite</string>
    <string name="profile">Profile</string>
    <string name="store_profile">My Store Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="add_discount">Add a Discount</string>
    <string name="my_discount">My Discounts</string>
    <string name="about">About SaleByMap</string>
    <string name="rate_app">Rate Application</string>
    <string name="contact_us">Contact Us</string>
    <string name="more_info">More Information</string>
    <string name="logout">Log Out</string>
    <string name="search_salebymap">Search SaleByMap</string>
    <string name="play_services_error">Please install google play services</string>
    <string name="unable_fetch_loc">Unable to fetch location</string>
    <string name="exit_app">Are you sure you want to exit the app?</string>
    <string name="my_profile">My profile</string>
    <string name="add_discountt">Add discount</string>
    <string name="heading_about">About</string>
    <string name="mapmap">MapMap</string>
    <string name="shop_profile">Shop profile</string>
    <string name="already_exists">user already exists, please login to proceed</string>
    <string name="no_category">No categories added yet</string>
    <string name="sel_cat">Please select main category from profile</string>
    <string name="sel_catt">Select category</string>
    <string name="dis_dec_error">Please write some description about discount</string>
    <string name="sel_dis_per">Please Select discount percentage</string>
    <string name="sel_sub_cate">Please select sub category</string>
    <string name="sel_dis_duration">Please Select discount duration</string>
    <string name="dis_add_succ">Discount added successfully</string>
    <string name="share">Share</string>
    <string name="share_confirm">Do you want to share this discount?</string>
    <string name="past_discount">PAST\nDISCOUNTS</string>
    <string name="future_discount">FUTURE\nDISCOUNTS</string>
    <string name="current_discount">CURRENT\nDISCOUNTS</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="current_pass_error">Please enter correct current password</string>
    <string name="enter_new_password">New password length should be 6</string>
    <string name="new_current_pass_error">New password should be different from current</string>
    <string name="confirm_pass_error">Confirm password should be same as new</string>
    <string name="pass_Save">Password changed successfully</string>
    <string name="discount_desc">Discount description</string>
    <string name="discount_per">Discount percentage</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="dis_dur">Discount duration</string>
    <string name="loc">Location</string>
    <string name="dis_loc">Discount location</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="select_loc">Select location</string>
    <string name="sel_per">Select percentage</string>
    <string name="sel_sub_cat">Select sub-category</string>
    <string name="sel_discount_starting_date">Select start date</string>
    <string name="sel_discount_end_date">Select discount end date</string>
    <string name="select_working_hours">Select working hours</string>
    <string name="days">Days</string>
    <string name="working_hours">Working hours</string>
    <string name="closed">Closed</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="weekdays">Weekdays</string>
    <string name="sat">Saturday</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="sel_loc_err">Please select location</string>
    <string name="close">Close</string>
    <string name="enter_phone_err">Please enter phone number</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <string name="main_loc_save">Main location saved successfully</string>
    <string name="select_opening_hour">Please select opening hour first</string>
    <string name="close_time_error">Closing time must be greater than starting</string>
    <string name="sel_mon_open">Select monday opening hours</string>
    <string name="sel_mon_close">Select monday closing hours</string>
    <string name="sel_tue_open">Select tuesday opening hours</string>
    <string name="sel_tue_close">Select tuesday closing hours</string>
    <string name="sel_wed_open">Select wednesday opening hours</string>
    <string name="sel_wed_close">Select wednesday closing hours</string>
    <string name="sel_thu_open">Select thursday opening hours</string>
    <string name="sel_thu_close">Select thursday closing hours</string>
    <string name="sel_fri_open">Select friday opening hours</string>
    <string name="sel_fri_close">Select friday closing hours</string>
    <string name="sel_sat_open">Select saturday opening hours</string>
    <string name="sel_sat_close">Select saturday closing hours</string>
</resources>