<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/category_bg"
    android:clickable="true"
    android:layout_height="match_parent">
    <include
        layout="@layout/layout_top_bar"
        ></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@drawable/ic_background" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/iv_earth"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_earth"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_welcome"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_below="@+id/iv_earth"
                        />
                </LinearLayout>
            </RelativeLayout>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:textCursorDrawable="@drawable/edittext_cursor_drawable"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_margin="20dp"
                android:paddingRight="10dp"
                android:background="@drawable/white_bg"
                android:hint="@string/email_address"
                android:textSize="14sp"
                android:textColorHint="@color/line_color"
                android:textColor="@color/line_color"
                />
            <EditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textCursorDrawable="@drawable/edittext_cursor_drawable"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:paddingRight="10dp"
                android:ellipsize="end"
                android:background="@drawable/white_bg"
                android:hint="@string/message"
                android:textSize="14sp"
                android:textColorHint="@color/line_color"
                android:textColor="@color/line_color"
                />
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/White"
                android:text="@string/submit"
                android:gravity="center"
                android:textSize="14sp"
                android:background="@drawable/btn_back"
                />
        </LinearLayout>


    </ScrollView>
</LinearLayout>